; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mtrr/extr_main.c_set_mtrr_ops.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/cpu/mtrr/extr_main.c_set_mtrr_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtrr_ops = type { i64 }

@X86_VENDOR_NUM = common dso_local global i64 0, align 8
@mtrr_ops = common dso_local global %struct.mtrr_ops** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_mtrr_ops(%struct.mtrr_ops* %0) #0 {
  %2 = alloca %struct.mtrr_ops*, align 8
  store %struct.mtrr_ops* %0, %struct.mtrr_ops** %2, align 8
  %3 = load %struct.mtrr_ops*, %struct.mtrr_ops** %2, align 8
  %4 = getelementptr inbounds %struct.mtrr_ops, %struct.mtrr_ops* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %1
  %8 = load %struct.mtrr_ops*, %struct.mtrr_ops** %2, align 8
  %9 = getelementptr inbounds %struct.mtrr_ops, %struct.mtrr_ops* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @X86_VENDOR_NUM, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %7
  %14 = load %struct.mtrr_ops*, %struct.mtrr_ops** %2, align 8
  %15 = load %struct.mtrr_ops**, %struct.mtrr_ops*** @mtrr_ops, align 8
  %16 = load %struct.mtrr_ops*, %struct.mtrr_ops** %2, align 8
  %17 = getelementptr inbounds %struct.mtrr_ops, %struct.mtrr_ops* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.mtrr_ops*, %struct.mtrr_ops** %15, i64 %18
  store %struct.mtrr_ops* %14, %struct.mtrr_ops** %19, align 8
  br label %20

20:                                               ; preds = %13, %7, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
